fix: list font size is too big

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -220,7 +220,7 @@ table tbody tr:last-of-type {
 }
 
 .list-title {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .spacer {
